# qoima-crm

./: docker-compose.yaml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/core/: enums.py  permissions.py  settings.py  urls.py  views.py
backend/src/dashboard/: tests.py  urls.py  views.py
backend/src/deals/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/src/deals/migrations/: 0001_initial.py  0002_initial.py  0003_alter_deal_user.py  0004_alter_dealfile_deal_alter_dealfile_file_and_more.py  0005_alter_deal_deal_amount.py  0006_deal_collaborators_alter_deal_user.py  0007_deal_name_deal_responsibles_alter_dealfile_file_and_more.py  0008_dealstage_parent_stage.py  0009_deal_is_archived.py
backend/src/employees/: models.py  serializers.py  tests.py  urls.py  views.py
backend/src/incomes/: apps.py  filters.py  models.py  serializers.py  urls.py  views.py
backend/src/onboards/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py
backend/src/sales/: admin.py  apps.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/src/spendings/: admin.py  apps.py  filters.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
backend/src/telegram_bot/: README.md  admin.py  apps.py  models.py  urls.py  views.py
backend/src/users/: admin.py  client_urls.py  models.py  password_reset.py  serializers.py  tests.py  urls.py  views.py
backend/src/wallets/: admin.py  apps.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
(+132 files in other folders)
